--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,102 @@
 .App {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 10px;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  /* height: 100vh; */
+  /* background-color: #000; */
+}
+
+.list__items {
+  display: flex;
+  /* grid-template-columns: 1fr; */
+  flex-direction: column;
+  width: 98%;
+  height: 100%;
+  row-gap: 25px;
+  padding: 10px;
+  justify-content: center;
+  align-items: center;
+  /* position: ; */
+  /* background-color: white; */
+}
+.list__single__item {
+  display: flex;
+  /* padding-left: 2px; */
+  border-radius: 10px;
+  width: 90%;
+  color: black;
+  font-family: 'Courier New', Courier, monospace;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  box-shadow: 0px 0px 1px 1px rgb(200, 200, 237);
+}
+
+.each__list {
+  display: block;
+  margin: 10px;
+  justify-content: center;
+  list-style: none;
+}
+
+.company__location {
+  display: block;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+}
+
+.size {
+  width: 100%;
+  justify-content: center;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.btn {
+  border: none;
+  height: 25px;
+  border-radius: 10px;
   color: white;
+  background-color: red;
+  cursor: pointer;
+  /* border-radius: 2px; */
 }
 
-.App-link {
-  color: #61dafb;
+.pagination {
+  display: flex;
+  position: relative;
+  bottom: 10px;
+  left: 50%;
+  width: 300px;
+  font-size: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.pagination > p {
+  margin-right: 20px;
+  justify-content: space-evenly;
+  cursor: pointer;
+}
+
+.selected {
+  background-color: red;
+}
+
+.detailed__data {
+  display: block;
+  width: 80%;
+  height: 200px;
+  background-color: rgb(250, 250, 255);
+  padding: 20px;
+  border-radius: 30px;
+  border: 1px solid red;
+}
+
+.description {
+  display: block;
+}
+.desp__heading {
+  font-weight: bolder;
 }
